# py-dmidecode

./: .gitignore  LICENSE  Makefile  README.md  codecov.yml  dmidecode.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  format.yml  pythonpackage.yml  scorecard.yml  semgrep.yml
dmidecode/: __init__.py  decode.py  parse.py  parse_test.py
dmidecode/tests/fixtures/: dmidecode.txt
py_dmidecode/: dmidecode.py
