[project]
name = "py-dmidecode"
version = "0.1.3"
description = "python library to parse the output of dmidecode"
authors = [{ name = "Christophe de Carvalho", email = "christophe.dcpm@gmail.com" }]
requires-python = ">=3.8.1,<4.0"
readme = "README.md"
keywords = ["system development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/zaibon/py-dmidecode"
Repository = "https://github.com/zaibon/py-dmidecode"
"Bug Tracker" = "https://github.com/zaibon/py-dmidecode/issues"

[dependency-groups]
dev = [
    "black>=23.3,<25.0",
    "flake8>=6,<8",
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
]

[tool.hatch.build.targets.sdist]
include = ["dmidecode"]

[tool.hatch.build.targets.wheel]
include = ["dmidecode"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
